--- a/src/Components/Dialogs/Dialogs.module.css
+++ b/src/Components/Dialogs/Dialogs.module.css
@@ -1,8 +1,23 @@
-.messages {
-  padding: 10px;
+.dialogsContainer {
+  display: grid;
+  grid-template-columns: 2fr 10fr;
 }
+
 .backgroundImg {
   width: auto;
   height: 1000px;
   background: url("./../../images/dialogsBackgroundImg.png") 50% 50% no-repeat;
+}
+
+.dialogs .dialogsItem {
+  padding: 10px 10px 0px;
+  margin-top: 10px;
+}
+
+.messages .message {
+  margin-top: 10px;
+  padding: 10px 10px 0px;
+  border: 1px solid grey;
+  background-color: rgba(128, 128, 128, 0.623);
+  border-radius: 10px;
 }
