--- a/src/Components/Dialogs/Dialogs.module.css
+++ b/src/Components/Dialogs/Dialogs.module.css
@@ -8,8 +8,15 @@
   height: 1000px;
   background: url("./../../images/dialogsBackgroundImg.png") 50% 50% no-repeat;
 }
+.dialogs a {
+  color: white;
+  text-decoration: none;
+}
+.dialogs a:hover {
+  color: rgb(19, 218, 19);
+}
 
-.dialogs .dialogsItem {
+.dialogsItem {
   padding: 10px 10px 0px;
   margin-top: 10px;
 }
