--- a/src/Components/Users/Users.module.css
+++ b/src/Components/Users/Users.module.css
@@ -1,38 +1,42 @@
-.userData{
-    display: grid;
-    grid-template-rows: 100px 1fr;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-areas: 
-    'photo fullName country'
-    'button status city';
-    padding: 20px;
-    margin: 20px;
-    border: 2px solid grey;
-    border-radius: 30px;
-    background: rgba(250, 6, 6, 0.239);
+.userData {
+  display: grid;
+  grid-template-rows: 100px 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-areas:
+    "photo fullName country"
+    "button status city";
+  padding: 20px;
+  margin: 20px;
+  border: 2px solid grey;
+  border-radius: 30px;
+  background: rgba(250, 6, 6, 0.239);
 }
 
-.photo{
-grid-area: photo;
+.photo {
+  grid-area: photo;
+}
+.button {
+  grid-area: button;
+  padding-left: 20px;
 }
 
-.fullName{
-grid-area: fullName;
+.fullName {
+  grid-area: fullName;
 }
 
-.status{
-grid-area: status;
+.status {
+  grid-area: status;
 }
 
-.country{
-grid-area: country;
+.country {
+  grid-area: country;
 }
 
-.city{
-grid-area: city;
+.city {
+  grid-area: city;
 }
 
-.userPhoto{
-    width: 100px;
-    height: 100px;
+.userPhoto {
+  width: 100px;
+  height: 100px;
 }
